--- a/_pages/impressum.html
+++ b/_pages/impressum.html
@@ -15,7 +15,9 @@ sitemap: false
     <h3>Vertreten durch:</h3>
     <p>
       Leonard Thiele<br>
-      Ramon Wedowski
+
+      Friedrichsburg 11
+      44803 Bochum
     </p>
 
     <h3>Kontakt:</h3>
